syntax = "proto3";

package signals;

option go_package = "./signals";

// TODO: These enums should be defined in a common file for all boards to use
enum SignalType {
  SIGNAL_TYPE_UNSPECIFIED = 0;
  SIGNAL_TYPE_DIGITAL = 1;
  SIGNAL_TYPE_ANALOG = 2;
}

enum SignalDirection {
  SIGNAL_DIRECTION_UNSPECIFIED = 0;
  SIGNAL_DIRECTION_INPUT = 1;
  SIGNAL_DIRECTION_OUTPUT = 2;
}

message SignalValue {
  oneof value {
    bool digital = 1;
    float analog_voltage = 2;
  }
}

message Signal {
  string ecu_name = 1;
  string signal_name = 2;
  SignalType type = 3;
  SignalDirection direction = 4;
}

message Request {
  Signal signal = 1;
  oneof request {
    ReadRequest read = 2;
    SetRequest set = 3;
    RegisterRequest register = 4;
  }
}

message ReadRequest {}
message RegisterRequest {}

message SetRequest {
  SignalValue value = 1;
}

message Response {
  bool ok = 1; // TODO: is this needed?
  string error = 2; // TODO: is this needed?
  oneof response {
    ReadResponse read = 3;
    SetResponse set = 4;
    RegisterResponse register = 5;
  }
}

message ReadResponse {
  SignalValue value = 1;
}

message SetResponse {}
message RegisterResponse {}
